--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     alias(libs.plugins.android.application)
+    id('kotlin-kapt')
     alias(libs.plugins.jetbrains.kotlin.android)
+
 }
 
 android {
@@ -39,6 +41,16 @@ dependencies {
     implementation libs.material
     implementation libs.androidx.activity
     implementation libs.androidx.constraintlayout
+    implementation libs.retrofit
+    implementation libs.converterGson
+    implementation libs.coroutinesAdapter
+    implementation libs.loggingInterceptor
+    implementation libs.hiltAndroid
+    kapt libs.hiltCompiler
+    implementation libs.room
+    kapt libs.roomCompiler
+    implementation libs.pagingRuntime
+    implementation libs.pagingCommon
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
