have error with Dagger hilt and Dao

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     alias(libs.plugins.android.application)
-    id('kotlin-kapt')
+    alias(libs.plugins.kotlin.kapt)
     alias(libs.plugins.jetbrains.kotlin.android)
+    alias(libs.plugins.dagger.hilt)
 
 }
 
@@ -32,6 +33,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -46,11 +53,15 @@ dependencies {
     implementation libs.coroutinesAdapter
     implementation libs.loggingInterceptor
     implementation libs.hiltAndroid
-    kapt libs.hiltCompiler
+    kapt libs.hiltAndroidCompiler
+    kaptAndroidTest libs.hiltCompiler
     implementation libs.room
+    implementation libs.roomRuntime
     kapt libs.roomCompiler
     implementation libs.pagingRuntime
     implementation libs.pagingCommon
+    implementation libs.viewModelExt
+    implementation libs.viewModelKtx
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
