--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:name=".GithubUserSearchApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Githubusersearch"
+        android:theme="@style/Base.Theme.Githubusersearch"
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.MainActivity"
@@ -24,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.ui.UserDetailActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
